--- a/client/main.html
+++ b/client/main.html
@@ -1,1 +1,15 @@
-
+<head>
+  <title>Orbitist</title>
+</head>
+<body>
+  <div class="container">
+    <header class="navbar navbar-default" role="navigation">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">Orbitist</a>
+      </div>
+    </header>
+    <div id="main">
+      {{> storiesList}}
+    </div>
+  </div>
+</body>
